# FromScratchGame

./: .gitignore  CMakeLists.txt  Notes.txt  mingw_toolchain.cmake
include/: image.h  input.h  main_includes.h  shader.h
include/glad/: glad.h
shaders/: tutorialshader.frag  tutorialshader.vert
src/: Notes.txt  glad.c  main.cpp  shader.h
